# arvo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  setup-github-repo.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: contact.md  finance.md  geo.md  identifiers.md  implementing.md  measurement.md  net.md  primitives.md  temporal.md  value-objects.md
scripts/: seed-issues.sh
src/: errors.rs  lib.rs  traits.rs
src/contact/: country_code.rs  email_address.rs  mod.rs  phone_number.rs  postal_address.rs  website.rs
src/finance/: bic.rs  card_expiry_date.rs  credit_card_number.rs  currency_code.rs  exchange_rate.rs  iban.rs  mod.rs  money.rs  percentage.rs  vat_number.rs
src/geo/: bounding_box.rs  coordinate.rs  country_region.rs  latitude.rs  longitude.rs  mod.rs  time_zone.rs
src/identifiers/: ean13.rs  ean8.rs  isbn10.rs  isbn13.rs  issn.rs  mod.rs  slug.rs  vin.rs
src/measurement/: area.rs  energy.rs  frequency.rs  length.rs  mod.rs  power.rs  pressure.rs  speed.rs  temperature.rs  volume.rs  weight.rs
src/net/: api_key.rs  domain.rs  http_status_code.rs  ip_address.rs  ip_v4_address.rs  ip_v6_address.rs  mac_address.rs  mime_type.rs  mod.rs  port.rs  url.rs
src/primitives/: base64_string.rs  base64string.rs  bounded_string.rs  hex_color.rs  locale.rs  mod.rs  non_empty_string.rs  non_negative_decimal.rs  non_negative_int.rs  positive_decimal.rs  positive_int.rs  positivedecimal.rs  probability.rs
src/temporal/: birth_date.rs  business_hours.rs  expiry_date.rs  mod.rs  time_range.rs  unix_timestamp.rs
