[package]
name = "arvo"
version = "0.5.0"
license = "MIT"
description = "Validated, immutable value objects for common domain types (email, money, identifiers, …)"
authors = ["Codegress <hello@codegress.com>"]
repository = "https://github.com/codegress-com/arvo"
documentation = "https://docs.rs/arvo"
homepage = "https://github.com/codegress-com/arvo"
keywords = ["value-object", "validation", "domain", "ddd", "type-safety"]
categories = ["data-structures", "value-formatting"]
readme = "README.md"
edition = "2024"
resolver = "3"
rust-version = "1.85"

[features]
default = []

# Domain modules — opt-in so you only pay for what you use
contact = ["dep:once_cell", "dep:regex", "dep:url"]
finance = ["dep:rust_decimal", "dep:chrono"]
identifiers = []
primitives = ["dep:rust_decimal", "dep:base64"]
temporal = ["dep:chrono"]

# Cross-cutting concerns can be combined with any module
serde = ["dep:serde"]
sql = ["dep:sqlx"]

# Everything at once
full = [
    "contact",
    "finance",
    "identifiers",
    "primitives",
    "temporal",
]

[dependencies]
thiserror = "2"
once_cell = { version = "1", optional = true }
regex = { version = "1", optional = true }
rust_decimal = { version = "1.26", optional = true }
chrono = { version = "0.4.23", optional = true, features = ["serde"] }
uuid = { version = "1", optional = true, features = ["v4"] }
ulid = { version = "1", optional = true }
url = { version = "~2.4", optional = true }
base64 = { version = "0.22", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
sqlx = { version = "0.8", optional = true, features = ["postgres"] }

[dev-dependencies]
serde_json = "1"
